--- a/admin.html
+++ b/admin.html
@@ -34,6 +34,8 @@
             font-weight: 600; padding: 0.5rem 1rem; border-radius: 0.375rem;
             transition: background-color 0.2s ease, transform 0.15s ease;
             text-transform: uppercase; letter-spacing: 0.025em; cursor: pointer; 
+            text-decoration: none;
+            display: inline-block;
         }
         .primary-btn { background-color: var(--primary-accent); color: white; }
         .primary-btn:hover { background-color: #003d4d; }
@@ -55,12 +57,16 @@
 </head>
 <body class="min-h-screen">
     <div id="admin-app" class="w-full max-w-7xl mx-auto my-8 p-4 md:p-6 lg:p-8 hidden">
-        <header class="flex justify-between items-center mb-10">
+        <header class="flex flex-wrap justify-between items-center mb-10 gap-4">
             <div>
                 <h1 class="text-3xl sm:text-4xl font-bold">Admin Dashboard</h1>
                 <p id="admin-greeting" class="text-lg text-[var(--text-secondary)]"></p>
             </div>
-            <button id="logout-btn" class="button-base bg-red-600 hover:bg-red-700 text-white text-sm py-2 px-4">Logout</button>
+            <!-- **** NEW: Navigation buttons container **** -->
+            <div class="flex items-center space-x-4">
+                <a href="./index.html" class="button-base bg-[var(--secondary-accent)] text-white text-sm py-2 px-4 hover:bg-[#8c6c1d]">Referrer Hub</a>
+                <button id="logout-btn" class="button-base bg-red-600 hover:bg-red-700 text-white text-sm py-2 px-4">Logout</button>
+            </div>
         </header>
 
         <main class="space-y-12">
